--- a/client/kotlin/app/build.gradle
+++ b/client/kotlin/app/build.gradle
@@ -82,7 +82,7 @@ dependencies {
     implementation 'com.github.AndreaCioccarelli:CryptoPrefs:1.3.2.5'
     implementation 'com.github.ittianyu:BottomNavigationViewEx:2.0.4'
     implementation "com.android.support:design:28.0.0"
-    implementation "androidx.viewpager2:viewpager2:1.0.0-alpha06"
+    implementation "androidx.viewpager2:viewpager2:1.0.0-beta02"
 
     implementation 'org.greenrobot:eventbus:3.1.1'
     debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
