--- a/client/kotlin/app/src/main/AndroidManifest.xml
+++ b/client/kotlin/app/src/main/AndroidManifest.xml
@@ -11,10 +11,12 @@
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:ignore="GoogleAppIndexingWarning">
+        tools:ignore="GoogleAppIndexingWarning"
+        tools:targetApi="n">
 
         <activity android:name=".ui.activity.MainActivity">
             <intent-filter>
