--- a/client/kotlin/app/build.gradle
+++ b/client/kotlin/app/build.gradle
@@ -79,13 +79,17 @@ dependencies {
     implementation 'com.github.AndreaCioccarelli:CryptoPrefs:1.3.2.5'
     implementation 'com.github.ittianyu:BottomNavigationViewEx:2.0.4'
     implementation "com.android.support:design:28.0.0"
-    implementation "androidx.viewpager2:viewpager2:1.0.0-beta02"
+    implementation "androidx.viewpager2:viewpager2:1.0.0-beta03"
 
     implementation 'org.greenrobot:eventbus:3.1.1'
+
+    //to view and modify sqlite db
     debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
     debugImplementation 'com.facebook.stetho:stetho:1.5.1'
     debugImplementation 'com.facebook.stetho:stetho-okhttp3:1.5.1'
     releaseImplementation "net.igenius:stetho-no-op:1.1"
+
+    //utils
     implementation 'com.github.cxyzy1:clearEditText:1.0.5'
-    implementation 'com.github.cxyzy1:kotlinUtils:1.0.7'
+    implementation "com.github.cxyzy1:kotlinUtils:$rootProject.kotlinUtilsVersion"
 }
