--- a/client/kotlin/app/src/main/AndroidManifest.xml
+++ b/client/kotlin/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <application
         android:name="com.cxyzy.note.App"
         android:allowBackup="false"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
