--- a/client/kotlin/app/build.gradle
+++ b/client/kotlin/app/build.gradle
@@ -12,7 +12,6 @@ android {
         targetSdkVersion rootProject.targetSdkVersion
         versionCode 1
         versionName "1.0"
-        vectorDrawables.useSupportLibrary true
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -88,6 +87,8 @@ dependencies {
     debugImplementation 'com.facebook.stetho:stetho:1.5.1'
     debugImplementation 'com.facebook.stetho:stetho-okhttp3:1.5.1'
     releaseImplementation "net.igenius:stetho-no-op:1.1"
+
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
     //utils
     implementation 'com.github.cxyzy1:clearEditText:1.0.5'
