--- a/client/kotlin/build.gradle
+++ b/client/kotlin/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.3.41'
+    ext.kotlin_version = '1.4.10'
 
     ext {
         // Sdk and tools
@@ -8,27 +8,27 @@ buildscript {
         targetSdkVersion = 29
 
         // App dependencies
-        constraintLayoutVersion = '2.0.0-beta2'
+        constraintLayoutVersion = '2.0.4'
         coreTestingVersion = '2.0.0'
         coroutinesVersion = "1.1.1"
         espressoVersion = '3.1.0-alpha4'
-        glideVersion = '4.9.0'
-        gradleVersion = '3.5.1'
+        glideVersion = '4.11.0'
+        gradleVersion = '4.1.1'
         gsonVersion = '2.8.2'
         junitVersion = '4.12'
         kotlinVersion = '1.3.21'
         ktlintVersion = '0.30.0'
-        ktxVersion = '1.0.2'
+        ktxVersion = '1.3.2'
         lifecycleVersion = '2.2.0-alpha02'
-        materialVersion = '1.0.0'
+        materialVersion = '1.2.1'
         navigationVersion = '1.0.0'
         recyclerViewVersion = '1.1.0-beta01'
         roomVersion = '2.2.0-alpha01'
         runnerVersion = '1.0.1'
-        supportLibraryVersion = '1.1.0-rc01'
+        supportLibraryVersion = '1.3.0-alpha02'
         uiAutomatorVersion = '2.2.0'
         workVersion = '1.0.1'
-        pagingVersion = '2.1.0'
+        pagingVersion = '2.1.2'
         retrofitVersion = '2.6.0'
         okhttpVersion = '3.9.1'
         loggingInterceptorVersion = '3.11.0'
@@ -36,18 +36,11 @@ buildscript {
         kotlinUtilsVersion = '1.0.11'
     }
     repositories {
-        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
-        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
-        maven { url 'http://maven.aliyun.com/nexus/content/repositories/google' }
-        maven { url 'http://maven.aliyun.com/nexus/content/repositories/gradle-plugin' }
         google()
         jcenter()
-        maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:$gradleVersion"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
-        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version" }
 }
 
